CSV logger + real-time chart